<resources>
    <string name="app_name">Meal Master</string>
    <string name="category1">Основные блюда</string>
    <string name="category2">Супы</string>
    <string name="category3">Гарниры</string>
    <string name="category4">Завтраки</string>
    <string name="category5">Закуски</string>
    <string name="category6">Выпечка</string>
    <string name="category7">Десерты</string>
    <string name="category8">Напитки</string>
    <string name="category9">Снеки</string>
    <string name="search_ph">Поиск рецепта</string>
    <string name="recipe_name_ph">Пицца</string>
    <string name="recipe_time_ph">2 ч</string>
    <string name="point_categories">Категории</string>
    <string name="all_recipes">Все рецепты</string>
    <string name="menu">Меню</string>
    <string name="rating">4.9</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="ingredients_list">Ингредиенты:\n%1$s</string>
    <string name="steps">Шаги</string>
    <string name="steps_list">Шаги:\n%1$s</string>
    <string name="privacy_policy_url">https://makesdigi.com/recipeApp/privacy.html</string>
    <string name="abt_dev">https://makesdigi.com/</string>
    <string name="id">ID</string>
    <string name="name">Название</string>
    <string name="description">Описание</string>
    <string name="category">Категория</string>
    <string name="reviews">Отзывы</string>
    <string name="no_reviews_placeholder">Отзывы пока отсутствуют, станьте первыми!</string>
    <string name="view">Просмотры</string>
    <string name="nutritional_info">Пищевая ценность</string>
    <string name="cooking_time">Время приготовления</string>
    <string name="lastUpdated">Последнее изменение</string>
    <string name="image">Картинка</string>
    <string name="imageDescription">Описание картинки</string>
    <string name="popular_recipes">Популярные</string>
    <string name="avgRatingText">Средний рейтинг:</string>
    <string name="steps_default">Шагов нет, но попробуйте просто перемешать</string>
    <string name="point_popular">Популярные рецепты</string>
    <string name="def_category">Категория</string>
    <string name="recipesByCategory">Рецепты из категории</string>
    <string name="add_text_to_review">Введите ваш отзыв здесь</string>
    <string name="send_btn_text">Отправить</string>
    <string name="no_reviews_yet">Отзывов пока нет, будьте первыми!</string>
    <string name="reviewsTitle">Отзывы</string>
    <string name="author_placeholder">author</string>
    <string name="username_placeholded">Имя пользователя</string>
    <string name="password_placeholder">Пароль</string>
    <string name="signin_btn_text">Вход</string>
    <string name="register_btn_text">Регистрация</string>
    <string name="signin_vk_btn_text">Вход через ВКонтакте</string>
    <string name="auth_txt">Авторизация</string>
    <string name="register_txt">/ Регистрация</string>
    <string name="moderation_txt">Модерация</string>
    <string name="delete_txt_mod">Удаление</string>
    <string name="delete_txt_mod_btn">Удалить</string>
    <string name="add_txt_mod">Добавление</string>
    <string name="add_txt_mod_btn">Добавить</string>
    <string name="update_txt_mod">Обновление</string>
    <string name="update_txt_mod_btn">Обновить</string>
    <string name="add_recipe_btn_text">Добавить рецепт</string>
    <string name="edit_recipe_name_text">Название рецепта</string>
    <string name="edit_recipe_description_text">Описание рецепта</string>
    <string name="edit_recipe_category_text">Категория</string>
    <string name="edit_recipe_ni_amount_text">Количество</string>
    <string name="edit_recipe_ni_mu_text">Единицы измерения (PC / G / KG / ML / L)</string>
    <string name="edit_recipe_ni_calories_text">Калории</string>
    <string name="edit_recipe_ni_carbohydrates_text">Углеводы (в граммах)</string>
    <string name="edit_recipe_ni_fats_text">Жиры (в граммах)</string>
    <string name="edit_recipe_ni_protein_text">Белки (в граммах)</string>
    <string name="edit_recipe_cooking_time_text">Время приготовления (в минутах)</string>
    <string name="edit_recipe_ingredient_name_text">Ингредиент</string>
    <string name="edit_recipe_ingredient_amount_text">Количество</string>
    <string name="edit_recipe_steps_text">Шаг приготовления</string>
    <string name="edit_recipe_send_btn_text">Отправить</string>
    <string name="add_ingredient_btn_text">Добавить ингредиент</string>
    <string name="add_step_btn_text">Добавить шаг</string>
    <string name="nutritional_unit">Единица измерения</string>
    <string name="rating_add">Оставить отзыв</string>
    <string name="my_recipes">Мои рецепты</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="upload_image_text">Загрузите изображение\n</string>
    <string name="upload_image_description">Загрузка картинки</string>
    <string name="moderation_accept">Принять</string>
    <string name="moderation_decline">Отклонить</string>
    <string name="date_placeholder">01.01.2024</string>
    <string name="review_placeholder">Очень хвалебный отзыв</string>
    <string name="user_review_placeholder">user12345</string>
    <string name="email_placeholder">Электронная почта</string>
    <string name="protein">Белки</string>
    <string name="fats">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="calories">Калории</string>
    <string name="_1000">1000</string>
    <string name="favourite_text">Избранное</string>
    <string name="to_change">Изменение</string>
    <string name="to_delete">Удаление</string>
    <string name="author_recipes_text">Рецепты пользователя</string>
    <string-array name="nutritional_units">
        <item>шт.</item>
        <item>г</item>
        <item>кг</item>
        <item>мл</item>
        <item>л</item>
    </string-array>
    <string-array name="recipe_categories">
        <item>Закуски</item>
        <item>Супы</item>
        <item>Основное</item>
        <item>Гарниры</item>
        <item>Десерты</item>
        <item>Выпечка</item>
        <item>Завтраки</item>
        <item>Напитки</item>
        <item>Снеки</item>
        <item>Салаты</item>
    </string-array>
</resources>