<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="56dp">

    <TextView
        android:id="@+id/idTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/categoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/stepsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/avgRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgRatingText"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/avgRatingBar"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.01"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:isIndicator="true"/>

    <TextView
        android:id="@+id/reviewsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/viewTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nutritional_infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutritional_info"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cooking_timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooking_time"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lastUpdatedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastUpdated"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:text="@string/image"
        android:textSize="16sp"
        android:textStyle="bold"
        android:contentDescription="@string/imageDescription" />


</LinearLayout>