<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.AddRecipeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activityAddRecipeConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.activity.AddRecipeActivity">

        <ImageView
            android:id="@+id/addRecipeBackBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_back_btn"
            android:clickable="false"
            android:foregroundGravity="center"
            android:hapticFeedbackEnabled="true"
            android:padding="2dp"
            android:src="@drawable/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/edit_recipe_name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRecipeBackBtn"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextName"
            android:autofillHints=""
            android:minLines="2"
            android:maxLines="4"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/addRecipeCategoryTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
            android:text="@string/edit_recipe_category_text" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_category_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRecipeCategoryTextView" />

        <EditText
            android:id="@+id/editTextNutritionalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_amount_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"
            android:autofillHints=""
            android:inputType="number" />

        <TextView
            android:id="@+id/addRecipeNutritionalUnitTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNutritionalAmount"
            android:text="@string/nutritional_unit" />

        <Spinner
            android:id="@+id/spinnerNutritionalUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_mu_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRecipeNutritionalUnitTextView" />

        <EditText
            android:id="@+id/editTextCalories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_calories_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerNutritionalUnit"
            android:autofillHints=""
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextCarbohydrates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_carbohydrates_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCalories"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextFat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_fats_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCarbohydrates"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextProtein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_ni_protein_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFat"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextCookingTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_cooking_time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextProtein"
            android:autofillHints=""
            android:inputType="number" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ingredientLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/editTextCookingTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/editTextIngredientName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_recipe_ingredient_name_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextIngredientAmount"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                android:autofillHints=""
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextIngredientAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/edit_recipe_ingredient_amount_text"
                app:layout_constraintStart_toEndOf="@id/editTextIngredientName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                android:autofillHints=""
                android:inputType="text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnAddIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient_btn_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientLayout" />


        <EditText
            android:id="@+id/editTextSteps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_recipe_steps_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddIngredient"
            android:autofillHints=""
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnAddStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_step_btn_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSteps" />


        <Button
            android:id="@+id/buttonSaveRecipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:text="@string/edit_recipe_send_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAddStep" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>