<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listrow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/card_shape_review"
    android:elevation="3dp">

    <RatingBar
        android:id="@+id/ratingBar_review"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_review"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/user_review"
        app:layout_constraintBottom_toBottomOf="@+id/user_review"
        app:layout_constraintStart_toEndOf="@+id/user_review"
        app:layout_constraintTop_toTopOf="@+id/user_review" />

    <TextView
        android:id="@+id/user_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_light"
        android:maxLength="40"
        android:maxLines="1"
        android:text="@string/user_review_placeholder"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="normal"
        app:emojiCompatEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/date_placeholder"
        android:textColor="@color/dark_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_review" />

    <TextView
        android:id="@+id/text_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/review_placeholder"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_review" />

</androidx.constraintlayout.widget.ConstraintLayout>

