<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_recipe_scene"
    tools:context=".presentation.activity.RecipeActivity">

    <ImageView
        android:id="@+id/recipe_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#F6F6F6"
        android:hapticFeedbackEnabled="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_sample" />

    <ImageView
        android:id="@+id/image_gradient"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/recipe_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/image_btm_overlay" />


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="230dp"
        android:background="@drawable/card_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView

            android:id="@+id/clock"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/tittle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="19dp"
            android:layout_marginTop="1dp"
            android:src="@drawable/clock_icon"
            app:tint="#019267" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/clock"
            android:layout_alignBottom="@+id/clock"
            android:layout_marginStart="6dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="3dp"
            android:layout_toEndOf="@+id/clock"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/recipe_time_ph"
            android:textColor="#323232"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/recipe_name_ph"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/ing_btn"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_below="@+id/clock"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/btn_ing"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/ingredients"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/steps_btn"
            android:layout_width="190dp"
            android:layout_height="48dp"
            android:layout_below="@+id/clock"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_ing"
            android:fontFamily="@font/roboto_medium"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/steps"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/ing_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ing_btn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-5dp"
            android:layout_marginTop="1dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/ing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="20dp"
                android:text=""
                android:textColor="#000000"
                android:textSize="15sp"
                app:emojiCompatEnabled="true" />

        </ScrollView>

        <ScrollView
            android:id="@+id/steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ing_btn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/steps_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="50dp"
                android:text="@string/steps_default"
                android:textColor="#000000"
                android:textSize="15sp"
                app:emojiCompatEnabled="true"
                android:lineSpacingExtra="9dp"
                android:letterSpacing="0.025"/>

        </ScrollView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_below="@+id/ing_btn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp"
            android:src="@drawable/text_overlay" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/card_back_btn"
        android:clickable="false"
        android:foregroundGravity="center"
        android:hapticFeedbackEnabled="true"
        android:padding="2dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>